@@ -46,7 +46,8 @@ Major changes since 3.2.1
 Changes since 4.0-alpha1
 ------------------------
 
- - renamed CompliantBag to CollectionBag
+ - [COLLECTIONS-468] Renamed CompliantBag to CollectionBag.
+ - [COLLECTIONS-475] Fixed conversion of timeout parameters in "PassiveExpiringMap".
 
 
 Removed classes
@@ -206,6 +207,7 @@ Changed classes / methods
 Fixed Bugs
 ----------
 
+ o [COLLECTIONS-475] Fixed conversion of timeout parameters in "PassiveExpiringMap".
  o [COLLECTIONS-474] ListOrderedMap#putAll(index, Object, Object) does not throw an exception anymore if the
                      map contains null values. Additionally added javadoc clarification on the supported bounds
                      for the index parameter. Thanks to Ning Chen.
